# azure-sdk-for-cpp-docker-env

./: .gitignore  README.md
debian10-vcpkg-keyvault-beta-1/: CMakeLists.txt
debian10-vcpkg-keyvault-beta-1/.devcontainer/: Dockerfile
debian10-vcpkg-keyvault-beta-1/.docker-src/: Dockerfile
debian10-vcpkg-keyvault-beta-1/create_list_get_delete_key/: CMakeLists.txt
debian10-vcpkg-keyvault-beta-1/create_list_get_delete_key/src/: main.cpp
